# reddit-recsys

./: .gitignore  README.md  featurize.py  main.py  pyproject.toml  query.py  reddit_ingest.py  requirements.txt
dags/: reddit_pipeline.py
environment/: airflow-helm-config.md  airflow-values.yaml
scripts/: config.py  featurize.py  reddit_ingest.py
